[gd_scene load_steps=9 format=3 uid="uid://c2dek5sfcid38"]

[ext_resource type="Script" path="res://Scripts/options.gd" id="1_gxok1"]
[ext_resource type="Texture2D" uid="uid://btugp6dctd50r" path="res://Assets/Imagenes/MenuPrincipal/Menu Asteroides 2.jpg" id="2_pna5g"]
[ext_resource type="AudioStream" uid="uid://dcfbhko58ot5d" path="res://Assets/Sonido/Credits Loop.ogg" id="3_lgwri"]
[ext_resource type="PackedScene" uid="uid://bk2yfox4su8ig" path="res://Scenes/transition_control.tscn" id="3_n4tsd"]
[ext_resource type="FontFile" uid="uid://c3l0xqydfr5do" path="res://Assets/Font/Nasa.ttf" id="5_stev7"]
[ext_resource type="Script" path="res://Scripts/SlidersOpciones.gd" id="5_upvwk"]
[ext_resource type="AudioStream" uid="uid://bgme1hqmwlsrx" path="res://Assets/Sonido/Click1.ogg" id="6_osomt"]
[ext_resource type="AudioStream" uid="uid://badcej00r47xx" path="res://Assets/Sonido/Hover.ogg" id="7_xjdno"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gxok1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 2344.0
offset_bottom = 1330.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_pna5g")
expand_mode = 1
stretch_mode = 3

[node name="MusicaFondo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_lgwri")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="Options" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -344.0
offset_top = -172.0
offset_right = 340.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.372549)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 10
theme_override_constants/shadow_offset_x = -4
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 7
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("5_stev7")
theme_override_font_sizes/font_size = 90
text = "options
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.548
anchor_right = 0.5
anchor_bottom = 0.548
offset_left = -156.0
offset_top = -94.104
offset_right = 157.0
offset_bottom = 103.896
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 4

[node name="SFX Volume" type="HSlider" parent="."]
layout_mode = 0
offset_left = 420.0
offset_top = 400.0
offset_right = 733.0
offset_bottom = 435.0
max_value = 1.0
step = 0.001
script = ExtResource("5_upvwk")
bus_name = "SFX"

[node name="Music Volume" type="HSlider" parent="."]
layout_mode = 0
offset_left = 420.0
offset_top = 324.0
offset_right = 733.0
offset_bottom = 340.0
max_value = 1.0
step = 0.001
script = ExtResource("5_upvwk")
bus_name = "Music"

[node name="SFX Label" type="Label" parent="."]
layout_mode = 2
offset_left = 419.0
offset_top = 364.0
offset_right = 732.0
offset_bottom = 388.0
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("5_stev7")
theme_override_font_sizes/font_size = 25
text = "SFX Volume"
horizontal_alignment = 1

[node name="Music Label" type="Label" parent="."]
layout_mode = 2
offset_left = 421.0
offset_top = 284.0
offset_right = 734.0
offset_bottom = 308.0
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("5_stev7")
theme_override_font_sizes/font_size = 25
text = "Music Volume"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1009.0
offset_top = 581.0
offset_right = 1125.0
offset_bottom = 624.0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_stev7")
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_osomt")
volume_db = 2.0
pitch_scale = 0.9
bus = &"SFX"

[node name="Hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_xjdno")
volume_db = 4.0
pitch_scale = 1.5
bus = &"SFX"

[node name="TransitionControl" parent="." instance=ExtResource("3_n4tsd")]
visible = false
layout_mode = 1
offset_left = -23.0
offset_right = 34.0
offset_bottom = 22.0

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
